Fixed Image Cutoff On Mobile

--- a/style.css
+++ b/style.css
@@ -110,8 +110,9 @@ body {
     aspect-ratio: 1 / 1;
     border-radius: 0.75rem 0.75rem 0 0;
     max-width: 370px;
-    margin: 100px 2.5px 0 2.5px;
+    margin: 0 2.5px 0 2.5px;
     object-fit: cover;
+    margin-top: 10rem;
   }
   .content {
     border-radius: 0 0 0.75rem 0.75rem;
